# infer

./: .gitignore  CMakeLists.txt
app/: CMakeLists.txt  single.cpp
include/: infer.hpp
src/: CMakeLists.txt  infer.cu  main.cpp  yolo.cu
